--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
+<!-- site-auteur #3 -->
 <!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Théâtre & Comédies — Programmation, Auteurs, Contact</title>
-    <meta
-      name="description"
-      content="Pièces de théâtre et comédies : résumés, distributions, infos pratiques, et contact."
-    />
     <link rel="icon" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Théâtre & Comédies — Site d'auteur</title>
   </head>
-  <body>
+  <body class="bg-stone-50 text-stone-900">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
