--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!doctype html>
 <html lang="fr">
     <head>
+            <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Théâtre & Comédie</title>
+        <title>Comédies de Franck DIDIER | Théâtre & Comédie</title>
+        <meta name="description" content="Découvrez plus de 20 ans de comédies de Franck DIDIER, destinées aux troupes amateures comme aux compagnies professionnelles. Catalogue, extraits, distributions et plus." />
+        <!-- Open Graph / Facebook -->
+        <meta property="og:title" content="Comédies de Franck DIDIER" />
+        <meta property="og:description" content="Découvrez plus de 20 ans de comédies aux multiples distributions, destinées aux troupes amateures comme aux compagnies professionnelles." />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://theatre-comedie.fr/" />
+        <meta property="og:image" content="/public/img/og-image.jpg" />
+        <meta property="og:site_name" content="Théâtre & Comédie" />
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Comédies de Franck DIDIER" />
+        <meta name="twitter:description" content="Découvrez plus de 20 ans de comédies aux multiples distributions, destinées aux troupes amateures comme aux compagnies professionnelles." />
+        <meta name="twitter:image" content="/public/img/og-image.jpg" />
     </head>
     <body class="bg-[#0b0b12] text-white antialiased">
         <div id="root"></div>
