--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Comédies de Franck DIDIER | Théâtre & Comédie</title>
+        <title>Comédies de Franck DIDIER</title>
         <meta name="description" content="Découvrez plus de 20 ans de comédies de Franck DIDIER, destinées aux troupes amateures comme aux compagnies professionnelles. Catalogue, extraits, distributions et plus." />
         <!-- Open Graph / Facebook -->
         <meta property="og:title" content="Comédies de Franck DIDIER" />
